# CRU_RDH_Decoder

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: cpp.yml  wheels.yml
cmake/: binparse-config.cmake.in
include/binparse/: bytecursor.hpp  parser.hpp  tail.hpp
python/: CMakeLists.txt  main_tail.py  module.cpp
src/: main_tail.cpp  parser.cpp  tail.cpp
